fix overflow-x

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -12,6 +12,7 @@
     border-radius: 3%;
     z-index: 30;
     background-color: #fff;
+    overflow-x: hidden;
 }
 
 .d-n {
